refactor: update add to cart button styles

--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -46,6 +46,9 @@ h1 {
 }
 
 .product-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   height: auto;
   width: 300px;
   background-color: var(--secondary-dark);
@@ -73,16 +76,18 @@ h1 {
 }
 
 .product-info {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  justify-content: flex-end;
   padding: 1rem;
 }
 
-.price-info {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: space-between;
+.product-info form {
+  margin-top: auto;
 }
 
-.price-info button {
+button {
   background-color: var(--secondary-light);
   border: none;
   padding: 0.5rem;
@@ -91,10 +96,11 @@ h1 {
   color: var(--secondary-dark);
   border-radius: 5px;
   transition: background 0.3s, color 0.3s, transform 0.2s;
+  width: 100%;
 }
 
-.price-info button:hover,
-.price-info button:focus {
+button:hover,
+button:focus {
   background-color: var(--primary-taupe);
   color: var(--primary-white);
   transform: translateY(-2px) scale(1.04);
