--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -394,9 +394,14 @@ footer {
 }
 
 .modal {
+  position: relative;
   background: white;
   padding: 40px;
   border-radius: 8px;
+  width: 100%;
+  max-width: 440px;
+  max-height: 600px;
+  overflow-y: auto;
   opacity: 0;
   transform: translateY(-20px);
   transition: opacity 0.3s ease, transform 0.3s ease;
@@ -408,6 +413,7 @@ footer {
 }
 .modal.active {
   opacity: 1;
+  display: block;
   transform: translateY(0);
 }
 
@@ -423,12 +429,12 @@ footer {
 }
 
 .close-btn {
-    position: absolute;
+    position: fixed;
     top: 25px;
     right: 30px;
     background: none;
     border: none;
-    font-size: 24px;
+    font-size: 44px;
     color: var(--primary-taupe);
     cursor: pointer;
     padding: 5px;
@@ -444,6 +450,10 @@ footer {
     margin-bottom: 40px;
 }
 
+.modal-title-container {
+  align-items: baseline;
+}
+
 .modal-title {
     font-family: var(--font-header);
     font-size: 2.5rem;
@@ -451,13 +461,16 @@ footer {
     color: var(--secondary-dark);
     margin-bottom: 12px;
     letter-spacing: -0.5px;
+    margin-left: 25px;
 }
+
 
 .modal-subtitle {
     font-family: var(--font-body);
     font-size: 1.3rem;
     color: var(--primary-taupe);
     font-weight: 300;
+    margin-left: 35px;
 }
 
 .form-group {
